--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,10 +43,12 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-feather": "^2.0.10",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
     "react-to-pdf": "^1.0.1",
+    "react-toastify": "^10.0.6",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
